<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/addTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/add_page_title"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:layout_below="@id/addTitleText"
        android:id="@+id/newTaskText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/new_task" />

    <TextView
        android:id="@+id/due_date_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_prompt_text"
        android:textSize="20sp"
        android:layout_below="@id/newTaskText"
        android:layout_marginTop="20dp"
        android:textColor = "@android:color/primary_text_light"
    />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:datePickerMode="spinner"
        android:layout_below="@id/due_date_prompt"/>

    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/datePicker"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_dark" />

</RelativeLayout>